Support Elasticsearch 6.3.2